tests-integration/tests/roundtrip/invalid/semantic/typecheck/multiple_wrong_elements_in_list/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/multiple_wrong_elements_in_list/input.essence:2:16:
  |
2 | such that sum([x, y, z]) = 15
  |                ^
Type error: x
	Expected: int
	Got: bool

tests/roundtrip/invalid/semantic/typecheck/multiple_wrong_elements_in_list/input.essence:2:19:
  |
2 | such that sum([x, y, z]) = 15
  |                   ^
Type error: y
	Expected: int
	Got: bool

tests/roundtrip/invalid/semantic/typecheck/multiple_wrong_elements_in_list/input.essence:2:22:
  |
2 | such that sum([x, y, z]) = 15
  |                      ^
Type error: z
	Expected: int
	Got: bool